--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             const passwordInput = document.getElementById('password-input');
             const password = passwordInput.value;
             // 여기에서 비밀번호를 변경하세요.
-            const correctPassword = "wlsgus0913"; 
+            const correctPassword = "0913"; 
 
             if (password === correctPassword) {
                 auth.signInAnonymously()
